tests/invalid/fatal_syntax.ostn
# Function: x
#   A function that intentionally fails syntax parsing.
fn x { ???invalid }
